# ballman_dapp_ic

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/bellman_icp24_backend/: Cargo.toml  bellman_icp24_backend.did
src/bellman_icp24_backend/src/: lib.rs
src/bellman_icp24_frontend/src/: index.html  index.js
