[package]
name = "bellman_icp24_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.0"
ic-cdk-macros = "0.6.0"
rand = "0.8.5"
bit-vec = "0.6.3"
byteorder = "1"
bls12_381 = "0.8.0"
ff = "0.13.0"
pairing = "0.23.0"
getrandom = { version = "0.2.2", features = ["custom"] }
bellman = { version = "0.14.0", features = ["crossbeam-channel", "lazy_static", "log", "num_cpus", "rayon"] }



